# vashlizingbot

./: .gitignore  bot.py  pyproject.toml
tgbot/: config.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/calculator/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  whenable.py  windows.py
tgbot/filters/: admin.py
tgbot/handlers/: admin.py  echo.py  user.py
tgbot/middlewares/: config.py
tgbot/models/: base.py  db_commands.py  repo.py
tgbot/utils/: calculation.py  decimals.py
