[tool.poetry]
name = "vashlizingbot"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
redis = "^4.5.4"
sqlalchemy = "^2.0.9"
aiosqlite = "^0.19.0"
aiogram-dialog = "2.0.0b17"
aiogram = "3.0.0b7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

